#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([NATtools], [0.1], [palmarti@cisco.com])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.


AM_CONDITIONAL(SUBMODULE, true)

AC_CONFIG_FILES([Makefile])

AC_CONFIG_SUBDIRS([sockaddrutil
                   stunlib
                   icelib
                   samplecode])



#AC_CONFIG_FILES([Makefile
#                 sockaddrutil/src/Makefile
#                 sockaddrutil/test/Makefile])

AC_OUTPUT
